[package]
name = "rutie_task_handler"
version = "0.1.0"
edition = "2018"
authors = ["Pete Taylor <pete.jc.taylor@hey.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4"
chrono = { version = "0.4", features = [ "serde" ] }
anyhow = { version = "~1.0"}
libc = "0.2"
rutie = "0.8.2"
rutie-serde = "0.3"